--- a/App.xaml
+++ b/App.xaml
@@ -1,5 +1,7 @@
 ﻿<Application x:Class="NetGrab.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
+             DispatcherUnhandledException="OnAppDispatcherUnhandledException"
+             Startup="OnAppStartup"
+             ShutdownMode="OnExplicitShutdown">
 </Application>
