--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,11 +1,36 @@
 ﻿<Window x:Class="NetGrab.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:local="clr-namespace:NetGrab"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        mc:Ignorable="d"
+        d:DataContext="{d:DesignInstance local:MainWindow}"
         Title="MainWindow" Height="430" Width="351">
+    <Window.Resources>
+        <BooleanToVisibilityConverter x:Key="BoolToVisibility" />
+        <local:DBG x:Key="Dbg"/>
+    </Window.Resources>
     <Grid Margin="5">
-        <StackPanel VerticalAlignment="Center">
-            <TextBox Name="TextBox" Width="120"/>
-            <Button Name="btnGo"  Width="120" Margin="2" HorizontalAlignment="Center" VerticalAlignment="Center" Click="BtnGo_OnClick">GO</Button>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+
+        <ListView Grid.Row="0" Name="ListView" ItemsSource="{Binding TaskHost, Converter={StaticResource Dbg}, Mode=OneWay}" >
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="Id" DisplayMemberBinding="{Binding LoaderId, UpdateSourceTrigger=PropertyChanged}" Width="60" />
+                    <GridViewColumn Header="State" DisplayMemberBinding="{Binding State, UpdateSourceTrigger=PropertyChanged}" Width="80" />
+                    <GridViewColumn Header="Description" DisplayMemberBinding="{Binding Description, UpdateSourceTrigger=PropertyChanged}" />
+                </GridView>
+            </ListView.View>
+        </ListView>
+
+        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right" 
+                    Visibility="{Binding TaskHost.Running, Converter={StaticResource Dbg}}">
+            <TextBox Name="TextBox" Width="60" Margin="2"/>
+            <Button HorizontalAlignment="Right" Content="GO" Click="BtnGo_OnClick" Width="60" Margin="2"/>
         </StackPanel>
     </Grid>
 </Window>
